--- a/challenge_one/index.html
+++ b/challenge_one/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Challenge One</title>
-</head>
-<body>
-  <div></div>
-  <div></div>
-  <div></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/challenge_one/style.css" />
+    <title>Challenge One</title>
+  </head>
+  <body>
+    <div class="div-1">Div-1</div>
+    <div class="div-2">Div-2</div>
+    <div class="div-3">Div-3</div>
+  </body>
 </html>
